important updates in progress

--- a/data/__internal__/test/index.properties
+++ b/data/__internal__/test/index.properties
@@ -1,7 +1,11 @@
 [en]
 name = Test Module
 searchFormTitle = Test Module Search Form Title
+ftsSearchFieldLabel = Test Module Search FTS Label
+ftsSearchFieldPlaceholder = Test Module Search FTS Placeholder
 
 [es]
 name = Módulo de Prueba
 searchFormTitle = Módulo de Prueba Título de Búsqueda
+ftsSearchFieldLabel = Módulo de Prueba FTS Label
+ftsSearchFieldPlaceholder = Módulo de Prueba FTS Placeholder
