--- a/data/__internal__/test/vehicle/chasis/index.properties
+++ b/data/__internal__/test/vehicle/chasis/index.properties
@@ -3,6 +3,8 @@ name = Chasis
 searchFormTitle = Search For a Chasis
 createFormTitle = Post a New Chasis
 editFormTitle = Edit your Chasis
+ftsSearchFieldLabel = Search For a Chasis
+ftsSearchFieldPlaceholder = Insert details here
 
 properties.chasis_type.label = Chasis Type
 properties.chasis_type.placeholder = Select the Type of your Chasis
@@ -34,6 +36,8 @@ name = Chasis
 searchFormTitle = Busque un Chasis
 createFormTitle = Postee un nuevo Chasis
 editFormTitle = Edite su Chasis
+ftsSearchFieldLabel = Busque un Chasis
+ftsSearchFieldPlaceholder = Inserte los detalles aquí
 
 properties.chasis_type.label = Tipo de Chasis
 properties.chasis_type.placeholder = Seleccione el tipo de su Chasis
