--- a/data/__internal__/test/vehicle/index.properties
+++ b/data/__internal__/test/vehicle/index.properties
@@ -3,6 +3,8 @@ name = Vehicle
 searchFormTitle = Search For a Vehicle
 createFormTitle = Post a New Vehicle
 editFormTitle = Edit your Vehicle
+ftsSearchFieldLabel = Search for a Vehicle
+ftsSearchFieldPlaceholder = Insert details here
 
 items.chasis.name = Vehicle Chasis
 items.chasis.exclusionSelectorLabel = The chasis is missing
@@ -46,6 +48,8 @@ name = Vehículo
 searchFormTitle = Busque un Vehículo
 createFormTitle = Postee un nuevo Vehículo
 editFormTitle = Edite su Vehículo
+ftsSearchFieldLabel = Busque un Vehículo
+ftsSearchFieldPlaceholder = Inserte los detalles aquí
 
 items.chasis.name = Chasis del Vehículo
 items.chasis.exclusionSelectorLabel = Falta el Chasis
