--- a/data/__internal__/users/index.properties
+++ b/data/__internal__/users/index.properties
@@ -1,7 +1,11 @@
 [en]
 name = Users
 searchFormTitle = Find Users
+ftsSearchFieldLabel = User Search
+ftsSearchFieldPlaceholder = Insert Relevant User Data
 
 [es]
 name = Usuarios
 searchFormTitle = Buscar Usuarios
+ftsSearchFieldLabel = Buscar Usuario
+ftsSearchFieldPlaceholder = Inserte información Relevante Sobre el Usuario
