--- a/data/__internal__/users/user.properties
+++ b/data/__internal__/users/user.properties
@@ -3,6 +3,8 @@ name = User
 searchFormTitle = Find Users
 createFormTitle = Sign Up
 editFormTitle = Edit Profile
+ftsSearchFieldLabel = User Search
+ftsSearchFieldPlaceholder = Insert Relevant User Data
 
 properties.username.label = Username
 properties.username.placeholder = Type an username
@@ -46,6 +48,8 @@ name = Usuario
 searchFormTitle = Iniciar Sesión
 createFormTitle = Regristrarse
 editFormTitle = Editar Perfil
+ftsSearchFieldLabel = Buscar Usuario
+ftsSearchFieldPlaceholder = Inserte información Relevante Sobre el Usuario
 
 properties.username.label = Nombre de usuario
 properties.username.placeholder = Escriba un nombre de usuario
