--- a/data/__internal__/test/item_definition/index.properties
+++ b/data/__internal__/test/item_definition/index.properties
@@ -3,6 +3,8 @@ name = Item Definition Test
 searchFormTitle = Item Definition Test Search Form Title
 createFormTitle = Item Definition Test Create Form Title
 editFormTitle = Item Definition Test Edit Form Title
+ftsSearchFieldLabel = Item Definition Test FTS
+ftsSearchFieldPlaceholder = Item Definition Test FTS Placeholder
 
 properties.boolean.label = Boolean
 properties.boolean.description = Boolean Description
@@ -285,6 +287,8 @@ name = Test de Definición de Item
 searchFormTitle = Test de Definición de Item Título de Búsqueda
 createFormTitle = Test de Definición de Item Título de Creación
 editFormTitle = Test de Definición de Item Título de Edición
+ftsSearchFieldLabel = Test de Definición de Item FTS
+ftsSearchFieldPlaceholder = Test de Definición de Item FTS Marcador
 
 properties.boolean.label = Valor Booleano
 properties.boolean.search.label = Valor Booleano en Modo Búsqueda
