--- a/data/__internal__/test/item_definition/index.properties
+++ b/data/__internal__/test/item_definition/index.properties
@@ -257,16 +257,16 @@ properties.location.label = Location
 properties.location.placeholder = Location Placeholder
 properties.location.search.label = Location in Search
 properties.location.search.placeholder = Location Placeholder in Search
-properties.location.search.distance.label = Location Distance
-properties.location.search.distance.placeholder = Location Placeholder
+properties.location.search.radius.label = Location Radius
+properties.location.search.radius.placeholder = Location Placeholder
 properties.location.error.NOT_NULLABLE = Location not Nullable error
 
 properties.location_nullable.label = Location Nullable
 properties.location_nullable.placeholder = Location Nullable Placeholder
 properties.location_nullable.search.label = Location Nullable in Search
 properties.location_nullable.search.placeholder = Location Nullable Placeholder in Search
-properties.location_nullable.search.distance.label = Location Nullable Distance
-properties.location_nullable.search.distance.placeholder = Location Nullable Placeholder
+properties.location_nullable.search.radius.label = Location Nullable Radius
+properties.location_nullable.search.radius.placeholder = Location Nullable Placeholder
 
 properties.files.label = Files
 properties.files.placeholder = Files Placeholder
@@ -540,16 +540,16 @@ properties.location.label = Ubicación
 properties.location.placeholder = Ubicación Marcador
 properties.location.search.label = Ubicación en Modo Búsqueda
 properties.location.search.placeholder = Ubicación Marcador en Modo Búsqueda
-properties.location.search.distance.label = Ubicación Distancia
-properties.location.search.distance.placeholder = Ubicación Distancia Marcador
+properties.location.search.radius.label = Ubicación Distancia
+properties.location.search.radius.placeholder = Ubicación Distancia Marcador
 properties.location.error.NOT_NULLABLE = Ubicación error de no Nullable
 
 properties.location_nullable.label = Ubicación Nullable
 properties.location_nullable.placeholder = Ubicación Nullable Marcador
 properties.location_nullable.search.label = Ubicación Nullable en Modo Búsqueda
 properties.location_nullable.search.placeholder = Ubicación Nullable Marcador en Modo Búsqueda
-properties.location_nullable.search.distance.label = Ubicación Nullable Distancia
-properties.location_nullable.search.distance.placeholder = Ubicación Nullable Distancia Marcador
+properties.location_nullable.search.radius.label = Ubicación Nullable Distancia
+properties.location_nullable.search.radius.placeholder = Ubicación Nullable Distancia Marcador
 
 properties.files.label = Archivos
 properties.files.placeholder = Archivos Marcador
