--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
+    "express-graphql": "^0.9.0",
     "knex": "^0.16.5",
     "pg": "^7.12.1",
     "prompt-confirm": "^2.0.4",
