--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
   "author": "Edward Gonzalez",
   "license": "ISC",
   "dependencies": {
+    "@types/graphql-fields": "^1.3.2",
     "express": "^4.17.1",
     "express-graphql": "^0.9.0",
+    "graphql-fields": "^2.0.3",
     "knex": "^0.16.5",
     "pg": "^7.12.1",
     "prompt-confirm": "^2.0.4",
