--- a/data/__internal__/users/user.properties
+++ b/data/__internal__/users/user.properties
@@ -16,9 +16,11 @@ properties.username.error.TOO_LARGE = Username is too long
 properties.email.label = Email
 properties.email.placeholder = Your email address
 properties.email.description = Your email will not be shared with anyone, it is kept private even to admins and moderators
-properties.email.error.NOT_NULLABLE = Missing email
 properties.email.error.TOO_LARGE = Email is too long
 properties.email.error.INVALID_SUBTYPE_VALUE = Email is invalid
+
+properties.e_validated.label = Email is validated
+properties.e_validated.description = Refers to whether the email is validated or not
 
 properties.password.label = Password
 properties.password.placeholder = Password
@@ -29,15 +31,11 @@ properties.role.label = Role
 properties.role.placeholder = Choose an user role
 properties.role.search.label = Search Role
 properties.role.search.placeholder = Specify a role to search
-properties.role.values.user = User
-properties.role.values.moderator = Moderator
-properties.role.values.admin = Admin
+properties.role.values.USER = User
+properties.role.values.MODERATOR = Moderator
+properties.role.values.ADMIN = Admin
 properties.role.null_value = Unspecified
 properties.role.error.NOT_NULLABLE = Missing Role
-
-properties.banned_until.label = Banned Until
-properties.banned_until.placeholder = Banned Until
-properties.banned_until.error.INVALID_DATETIME = Invalid Date
 
 properties.address.label = Address (optional)
 properties.address.placeholder = Type your address
@@ -61,9 +59,11 @@ properties.username.error.TOO_LARGE = El nombre de usuario es demasiado largo
 properties.email.label = Email
 properties.email.placeholder = Dirección de correo electrónico
 properties.email.description = Tu correo no será compartido con nadie, se mantendrá privado incluso para administradores y moderadores
-properties.email.error.NOT_NULLABLE = Falta el correo electrónico
 properties.email.error.TOO_LARGE = El correo electrónico es demasiado largo
 properties.email.error.INVALID_SUBTYPE_VALUE = El correo electrónico es inválido
+
+properties.e_validated.label = El email ha sido confirmado
+properties.e_validated.description = Indica si el correo electrónico ha sido confirmado por el usuario
 
 properties.password.label = Contraseña
 properties.password.placeholder = Contraseña
@@ -74,15 +74,11 @@ properties.role.label = Rol
 properties.role.placeholder = Seleccione el Rol del Usuario
 properties.role.search.label = Buscar Rol
 properties.role.search.placeholder = Especifíque un rol para la Búsqueda
-properties.role.values.user = Usuario
-properties.role.values.moderator = Moderador
-properties.role.values.admin = Administrador
+properties.role.values.USER = Usuario
+properties.role.values.MODERATOR = Moderador
+properties.role.values.ADMIN = Administrador
 properties.role.null_value = Sin Especificar
 properties.role.error.NOT_NULLABLE = Falta el Rol
-
-properties.banned_until.label = Banear hasta la fecha
-properties.banned_until.placeholder = Banear hasta la fecha
-properties.banned_until.error.INVALID_DATETIME = Fecha Inválida
 
 properties.address.label = Dirección (opcional)
 properties.address.placeholder = Escriba su Dirección
