--- a/data/__internal__/test/index.properties
+++ b/data/__internal__/test/index.properties
@@ -4,8 +4,22 @@ searchFormTitle = Test Module Search Form Title
 ftsSearchFieldLabel = Test Module Search FTS Label
 ftsSearchFieldPlaceholder = Test Module Search FTS Placeholder
 
+properties.propext_test.label = Propext test
+properties.propext_test.placeholder = Propext test Placeholder
+properties.propext_test.search.label = Propext test search label
+properties.propext_test.search.placeholder = Propext test search Placeholder
+properties.propext_test.error.TOO_LARGE = Propext test too large error
+properties.propext_test.error.INVALID_SUBTYPE_VALUE = Propext test invalid subtype
+
 [es]
 name = Módulo de Prueba
 searchFormTitle = Módulo de Prueba Título de Búsqueda
 ftsSearchFieldLabel = Módulo de Prueba FTS Label
 ftsSearchFieldPlaceholder = Módulo de Prueba FTS Placeholder
+
+properties.propext_test.label = Propext prueba
+properties.propext_test.placeholder = Propext prueba Placeholder
+properties.propext_test.search.label = Propext prueba search label
+properties.propext_test.search.placeholder = Propext prueba search Placeholder
+properties.propext_test.error.TOO_LARGE = Propext prueba too large error
+properties.propext_test.error.INVALID_SUBTYPE_VALUE = Propext prueba invalid subtype
