--- a/data/__internal__/users/user.properties
+++ b/data/__internal__/users/user.properties
@@ -41,6 +41,9 @@ properties.address.label = Address (optional)
 properties.address.placeholder = Type your address
 properties.address.description = This address is used only for ease of use and it is not shared with anyone, not even admins or mods. It is used to prefill information for transactions.
 
+policies.edit.REQUIRES_PASSWORD_CONFIRMATION = Password confirmation
+policies.delete.REQUIRES_PASSWORD_CONFIRMATION = Password confirmation
+
 [es]
 name = Usuario
 searchFormTitle = Iniciar Sesión
@@ -83,3 +86,6 @@ properties.role.error.NOT_NULLABLE = Falta el Rol
 properties.address.label = Dirección (opcional)
 properties.address.placeholder = Escriba su Dirección
 properties.address.description = La Dirección no será compartida con nadie, ni siquiera admins o moderadores. Sólo existe como utilidad para auto-completar la información de transacciones.
+
+policies.edit.REQUIRES_PASSWORD_CONFIRMATION = Confirme su contraseña
+policies.delete.REQUIRES_PASSWORD_CONFIRMATION = Confirme su contraseña
