--- a/package.json
+++ b/package.json
@@ -15,10 +15,14 @@
   "author": "Edward Gonzalez",
   "license": "ISC",
   "dependencies": {
+    "@types/dompurify": "^2.0.0",
     "@types/graphql-fields": "^1.3.2",
+    "@types/jsdom": "^12.2.4",
+    "dompurify": "^2.0.7",
     "express": "^4.17.1",
     "express-graphql": "^0.9.0",
     "graphql-fields": "^2.0.3",
+    "jsdom": "^15.2.1",
     "knex": "^0.16.5",
     "pg": "^7.12.1",
     "prompt-confirm": "^2.0.4",
@@ -59,7 +63,6 @@
     "convert-units": "^2.3.4",
     "css-loader": "^2.1.1",
     "deep-equal": "^1.1.0",
-    "fast-html-parser": "^1.0.1",
     "graphql": "^14.5.8",
     "history": "^4.10.1",
     "install": "^0.12.2",
