--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@material-ui/icons": "^3.0.2",
     "@types/autosuggest-highlight": "^3.1.0",
     "@types/colors": "^1.2.1",
+    "@types/debug": "^4.1.5",
     "@types/deep-equal": "^1.0.1",
     "@types/express": "^4.17.2",
     "@types/node": "^10.17.5",
@@ -62,6 +63,7 @@
     "colors": "^1.4.0",
     "convert-units": "^2.3.4",
     "css-loader": "^2.1.1",
+    "debug": "^4.1.1",
     "deep-equal": "^1.1.0",
     "graphql": "^14.5.8",
     "history": "^4.10.1",
