--- a/data/__internal__/users/user.properties
+++ b/data/__internal__/users/user.properties
@@ -12,6 +12,7 @@ properties.username.search.label = Username
 properties.username.search.placeholder = Type the username
 properties.username.error.NOT_NULLABLE = Missing username
 properties.username.error.TOO_LARGE = Username is too long
+properties.username.error.NOT_UNIQUE = Username is taken
 
 properties.email.label = Email
 properties.email.placeholder = Your email address
@@ -62,6 +63,7 @@ properties.username.search.label = Nombre de usuario
 properties.username.search.placeholder = Escriba el nombre del usuario
 properties.username.error.NOT_NULLABLE = Falta el nombre del usuario
 properties.username.error.TOO_LARGE = El nombre de usuario es demasiado largo
+properties.username.error.NOT_UNIQUE = El nombre de usuario ya ha sido tomado
 
 properties.email.label = Email
 properties.email.placeholder = Dirección de correo electrónico
