--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/dompurify": "^2.0.0",
     "@types/graphql-fields": "^1.3.2",
     "@types/jsdom": "^12.2.4",
+    "body-parser": "^1.19.0",
     "dompurify": "^2.0.7",
     "express": "^4.17.1",
     "express-graphql": "^0.9.0",
