token and errors

--- a/itemize/data/users/user.properties
+++ b/itemize/data/users/user.properties
@@ -27,6 +27,7 @@ properties.password.label = Password
 properties.password.placeholder = Password
 properties.password.error.NOT_NULLABLE = Missing password
 properties.password.error.TOO_LARGE = Password too long
+properties.password.error.INVALID_PASSWORD = Invalid Password
 
 properties.role.label = Role
 properties.role.placeholder = Choose an user role
@@ -78,6 +79,7 @@ properties.password.label = Contraseña
 properties.password.placeholder = Contraseña
 properties.password.error.NOT_NULLABLE = Falta la contraseña
 properties.password.error.TOO_LARGE = La contraseña es demasiado larga
+properties.password.error.INVALID_PASSWORD = Contraseña Inválida
 
 properties.role.label = Rol
 properties.role.placeholder = Seleccione el Rol del Usuario
