--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "@types/dompurify": "^2.0.0",
     "@types/graphql-fields": "^1.3.2",
     "@types/jsdom": "^12.2.4",
+    "@types/jsonwebtoken": "^8.3.5",
     "body-parser": "^1.19.0",
     "dompurify": "^2.0.7",
     "express": "^4.17.1",
     "express-graphql": "^0.9.0",
     "graphql-fields": "^2.0.3",
     "jsdom": "^15.2.1",
+    "jsonwebtoken": "^8.5.1",
     "knex": "^0.16.5",
     "pg": "^7.12.1",
     "prompt-confirm": "^2.0.4",
