--- a/itemize/data/index.properties
+++ b/itemize/data/index.properties
@@ -55,6 +55,15 @@ unit_dialog_others = Other Units
 unit_dialog_metric = Metric
 unit_dialog_imperial = Imperial
 
+error.INVALID_CREDENTIALS = Invalid user or password
+error.BLOCKED = The item has been blocked
+error.DELETED = The item has been deleted
+error.FORBIDDEN = Forbidden
+error.CANT_CONNECT = Canņot communicate with the server
+error.INTERNAL_SERVER_ERROR = Internal Server Error
+error.UNSPECIFIED = Unspecified Error
+error.MUST_BE_LOGGED_IN = You must be logged in
+
 [es]
 name = Español
 number_decimal_separator = ,
@@ -111,3 +120,12 @@ unit_dialog_title = Seleccione una Unidad
 unit_dialog_others = Otras Unidades
 unit_dialog_metric = Métricas
 unit_dialog_imperial = Imperiales
+
+error.INVALID_CREDENTIALS = Contraseña o Usuario Inválido
+error.BLOCKED = El item ha sido bloqueado
+error.DELETED = El item has sido eliminado
+error.FORBIDDEN = Acción Denegada
+error.CANT_CONNECT = No se puede comunicar con el servidor
+error.INTERNAL_SERVER_ERROR = Error Interno en el Servidor
+error.UNSPECIFIED = Error desconocido
+error.MUST_BE_LOGGED_IN = Debes iniciar sesión para realizar esta acción
