--- a/itemize/data/index.properties
+++ b/itemize/data/index.properties
@@ -63,6 +63,7 @@ error.CANT_CONNECT = Canņot communicate with the server
 error.INTERNAL_SERVER_ERROR = Internal Server Error
 error.UNSPECIFIED = Unspecified Error
 error.MUST_BE_LOGGED_IN = You must be logged in
+error.USER_BLOCKED = You have been banned
 
 [es]
 name = Español
@@ -129,3 +130,4 @@ error.CANT_CONNECT = No se puede comunicar con el servidor
 error.INTERNAL_SERVER_ERROR = Error Interno en el Servidor
 error.UNSPECIFIED = Error desconocido
 error.MUST_BE_LOGGED_IN = Debes iniciar sesión para realizar esta acción
+error.USER_BLOCKED = Usted está baneado
