--- a/itemize/data/test/index.properties
+++ b/itemize/data/test/index.properties
@@ -1,8 +1,7 @@
 [en]
 name = Test Module
-searchFormTitle = Test Module Search Form Title
-ftsSearchFieldLabel = Test Module Search FTS Label
-ftsSearchFieldPlaceholder = Test Module Search FTS Placeholder
+fts_search_field_label = Test Module Search FTS Label
+fts_search_field_placeholder = Test Module Search FTS Placeholder
 
 properties.propext_test.label = Propext test
 properties.propext_test.placeholder = Propext test Placeholder
@@ -13,9 +12,8 @@ properties.propext_test.error.INVALID_SUBTYPE_VALUE = Propext test invalid subty
 
 [es]
 name = Módulo de Prueba
-searchFormTitle = Módulo de Prueba Título de Búsqueda
-ftsSearchFieldLabel = Módulo de Prueba FTS Label
-ftsSearchFieldPlaceholder = Módulo de Prueba FTS Placeholder
+fts_search_field_label = Módulo de Prueba FTS Label
+fts_search_field_placeholder = Módulo de Prueba FTS Placeholder
 
 properties.propext_test.label = Propext prueba
 properties.propext_test.placeholder = Propext prueba Placeholder
