--- a/itemize/data/test/item_definition/index.properties
+++ b/itemize/data/test/item_definition/index.properties
@@ -1,10 +1,7 @@
 [en]
 name = Item Definition Test
-searchFormTitle = Item Definition Test Search Form Title
-createFormTitle = Item Definition Test Create Form Title
-editFormTitle = Item Definition Test Edit Form Title
-ftsSearchFieldLabel = Item Definition Test FTS
-ftsSearchFieldPlaceholder = Item Definition Test FTS Placeholder
+fts_search_field_label = Item Definition Test FTS
+fts_search_field_placeholder = Item Definition Test FTS Placeholder
 
 properties.boolean.label = Boolean
 properties.boolean.description = Boolean Description
@@ -284,11 +281,8 @@ properties.files_single.error.TOO_LARGE = File only one
 
 [es]
 name = Test de Definición de Item
-searchFormTitle = Test de Definición de Item Título de Búsqueda
-createFormTitle = Test de Definición de Item Título de Creación
-editFormTitle = Test de Definición de Item Título de Edición
-ftsSearchFieldLabel = Test de Definición de Item FTS
-ftsSearchFieldPlaceholder = Test de Definición de Item FTS Marcador
+fts_search_field_label = Test de Definición de Item FTS
+fts_search_field_placeholder = Test de Definición de Item FTS Marcador
 
 properties.boolean.label = Valor Booleano
 properties.boolean.search.label = Valor Booleano en Modo Búsqueda
