--- a/itemize/data/test/vehicle/chasis/index.properties
+++ b/itemize/data/test/vehicle/chasis/index.properties
@@ -1,10 +1,7 @@
 [en]
 name = Chasis
-searchFormTitle = Search For a Chasis
-createFormTitle = Post a New Chasis
-editFormTitle = Edit your Chasis
-ftsSearchFieldLabel = Search For a Chasis
-ftsSearchFieldPlaceholder = Insert details here
+fts_search_field_label = Search For a Chasis
+fts_search_field_placeholder = Insert details here
 
 properties.chasis_type.label = Chasis Type
 properties.chasis_type.placeholder = Select the Type of your Chasis
@@ -33,11 +30,8 @@ properties.external_mudguards.search.description = Tick if you require external 
 
 [es]
 name = Chasis
-searchFormTitle = Busque un Chasis
-createFormTitle = Postee un nuevo Chasis
-editFormTitle = Edite su Chasis
-ftsSearchFieldLabel = Busque un Chasis
-ftsSearchFieldPlaceholder = Inserte los detalles aquí
+fts_search_field_label = Busque un Chasis
+fts_search_field_placeholder = Inserte los detalles aquí
 
 properties.chasis_type.label = Tipo de Chasis
 properties.chasis_type.placeholder = Seleccione el tipo de su Chasis
