--- a/itemize/data/test/vehicle/index.properties
+++ b/itemize/data/test/vehicle/index.properties
@@ -1,18 +1,15 @@
 [en]
 name = Vehicle
-searchFormTitle = Search For a Vehicle
-createFormTitle = Post a New Vehicle
-editFormTitle = Edit your Vehicle
-ftsSearchFieldLabel = Search for a Vehicle
-ftsSearchFieldPlaceholder = Insert details here
+fts_search_field_label = Search for a Vehicle
+fts_search_field_placeholder = Insert details here
 
 items.chasis.name = Vehicle Chasis
-items.chasis.exclusionSelectorLabel = The chasis is missing
-items.chasis.exclusionTernarySelectorLabel = Select whether the chasis must be included or not
-items.chasis.excludedLabel = The chasis is missing
-items.chasis.includedLabel = Includes a chasis
-items.chasis.anyLabel = Any
-items.chasis.calloutExcludedLabel = No Chasis
+items.chasis.exclusion_selector_label = The chasis is missing
+items.chasis.exclusion_ternary_selector_label = Select whether the chasis must be included or not
+items.chasis.excluded_label = The chasis is missing
+items.chasis.included_label = Includes a chasis
+items.chasis.any_label = Any
+items.chasis.callout_excluded_label = No Chasis
 
 properties.vehicle_type.label = Vehicle Type
 properties.vehicle_type.placeholder = Select the Type of your Vehicle
@@ -45,19 +42,16 @@ properties.has_nitro.search.description = If you are expecting NO2 boosting, you
 
 [es]
 name = Vehículo
-searchFormTitle = Busque un Vehículo
-createFormTitle = Postee un nuevo Vehículo
-editFormTitle = Edite su Vehículo
-ftsSearchFieldLabel = Busque un Vehículo
-ftsSearchFieldPlaceholder = Inserte los detalles aquí
+fts_search_field_label = Busque un Vehículo
+fts_search_field_placeholder = Inserte los detalles aquí
 
 items.chasis.name = Chasis del Vehículo
-items.chasis.exclusionSelectorLabel = Falta el Chasis
-items.chasis.exclusionTernarySelectorLabel = Seleccione si necesita que el chasis sea incluido o no
-items.chasis.excludedLabel = Falta el chasis
-items.chasis.includedLabel = Incluye el chasis
-items.chasis.anyLabel = Cualquiera
-items.chasis.calloutExcludedLabel = Sin Chasis
+items.chasis.exclusion_selector_label = Falta el Chasis
+items.chasis.exclusion_ternary_selector_label = Seleccione si necesita que el chasis sea incluido o no
+items.chasis.excluded_label = Falta el chasis
+items.chasis.included_label = Incluye el chasis
+items.chasis.any_label = Cualquiera
+items.chasis.callout_excluded_label = Sin Chasis
 
 properties.vehicle_type.label = Tipo de Vehículo
 properties.vehicle_type.placeholder = Seleccione el tipo de su Vehículo
