--- a/itemize/data/users/index.properties
+++ b/itemize/data/users/index.properties
@@ -1,11 +1,9 @@
 [en]
 name = Users
-searchFormTitle = Find Users
-ftsSearchFieldLabel = User Search
-ftsSearchFieldPlaceholder = Insert Relevant User Data
+fts_search_field_label = User Search
+fts_search_field_placeholder = Insert Relevant User Data
 
 [es]
 name = Usuarios
-searchFormTitle = Buscar Usuarios
-ftsSearchFieldLabel = Buscar Usuario
-ftsSearchFieldPlaceholder = Inserte información Relevante Sobre el Usuario
+fts_search_field_label = Buscar Usuario
+fts_search_field_placeholder = Inserte información Relevante Sobre el Usuario
