--- a/itemize/data/users/user.properties
+++ b/itemize/data/users/user.properties
@@ -1,10 +1,10 @@
 [en]
 name = User
-searchFormTitle = Find Users
-createFormTitle = Sign Up
-editFormTitle = Edit Profile
-ftsSearchFieldLabel = User Search
-ftsSearchFieldPlaceholder = Insert Relevant User Data
+fts_search_field_label = User Search
+fts_search_field_placeholder = Insert Relevant User Data
+custom.login = Login
+custom.logout = Logout
+custom.signup = Signup
 
 properties.username.label = Username
 properties.username.placeholder = Type an username
@@ -51,11 +51,11 @@ policies.delete.REQUIRES_PASSWORD_CONFIRMATION.fail = Invalid password provided
 
 [es]
 name = Usuario
-searchFormTitle = Iniciar Sesión
-createFormTitle = Regristrarse
-editFormTitle = Editar Perfil
-ftsSearchFieldLabel = Buscar Usuario
-ftsSearchFieldPlaceholder = Inserte información Relevante Sobre el Usuario
+fts_search_field_label = Buscar Usuario
+fts_search_field_placeholder = Inserte información Relevante Sobre el Usuario
+custom.login = Iniciar Sesión
+custom.logout = Cerrar Sesión
+custom.signup = Registrarse
 
 properties.username.label = Nombre de usuario
 properties.username.placeholder = Escriba un nombre de usuario
