--- a/itemize/data/users/user.properties
+++ b/itemize/data/users/user.properties
@@ -5,6 +5,7 @@ fts_search_field_placeholder = Insert Relevant User Data
 custom.login = Login
 custom.logout = Logout
 custom.signup = Signup
+custom.profile = Profile
 
 properties.username.label = Username
 properties.username.placeholder = Type an username
@@ -56,6 +57,7 @@ fts_search_field_placeholder = Inserte información Relevante Sobre el Usuario
 custom.login = Iniciar Sesión
 custom.logout = Cerrar Sesión
 custom.signup = Registrarse
+custom.profile = Perfil de Usuario
 
 properties.username.label = Nombre de usuario
 properties.username.placeholder = Escriba un nombre de usuario
