--- a/itemize/data/index.properties
+++ b/itemize/data/index.properties
@@ -57,7 +57,7 @@ unit_dialog_imperial = Imperial
 
 error.INVALID_CREDENTIALS = Invalid user or password
 error.BLOCKED = The item has been blocked
-error.DELETED = The item has been deleted
+error.NOT_FOUND = The item cannot be found
 error.FORBIDDEN = Forbidden
 error.CANT_CONNECT = Canņot communicate with the server
 error.INTERNAL_SERVER_ERROR = Internal Server Error
@@ -124,7 +124,7 @@ unit_dialog_imperial = Imperiales
 
 error.INVALID_CREDENTIALS = Contraseña o Usuario Inválido
 error.BLOCKED = El item ha sido bloqueado
-error.DELETED = El item has sido eliminado
+error.NOT_FOUND = El item no existe
 error.FORBIDDEN = Acción Denegada
 error.CANT_CONNECT = No se puede comunicar con el servidor
 error.INTERNAL_SERVER_ERROR = Error Interno en el Servidor
