--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@date-io/moment": "^1.3.11",
     "@material-ui/core": "^4.7.0",
     "@material-ui/icons": "^4.5.1",
+    "@material-ui/pickers": "^3.2.8",
     "@types/autosuggest-highlight": "^3.1.0",
     "@types/colors": "^1.2.1",
     "@types/debug": "^4.1.5",
@@ -73,7 +74,6 @@
     "install": "^0.12.2",
     "json-source-map": "^0.4.0",
     "leaflet": "^1.6.0",
-    "material-ui-pickers": "^2.2.4",
     "mini-css-extract-plugin": "^0.5.0",
     "moment": "^2.24.0",
     "node-sass": "^4.13.0",
