--- a/itemize/data/test/item_definition/index.properties
+++ b/itemize/data/test/item_definition/index.properties
@@ -62,12 +62,14 @@ properties.string_autocomplete_nullable_enforced.placeholder = String Autocomple
 properties.string_autocomplete_nullable_enforced.search.label = String Autocomplete Nullable Enforced Search Mode
 properties.string_autocomplete_nullable_enforced.search.placeholder = String Autocomplete Nullable Enforced Placeholder Search Mode
 properties.string_autocomplete_nullable_enforced.error.TOO_LARGE = String Autocomplete Nullable Enforced too long error
+properties.string_autocomplete_nullable_enforced.error.INVALID_VALUE = String Autocomplete Nullable Enforced Invalid Value
 
 properties.string_autocomplete_nullable_locale.label = String Autocomplete Nullable Localized
 properties.string_autocomplete_nullable_locale.placeholder = String Autocomplete Nullable Localized Placeholder
 properties.string_autocomplete_nullable_locale.search.label = String Autocomplete Nullable Localized Search Mode
 properties.string_autocomplete_nullable_locale.search.placeholder = String Autocomplete Nullable Localized Placeholder Search Mode
 properties.string_autocomplete_nullable_locale.error.TOO_LARGE = String Autocomplete Nullable Localized too long error
+properties.string_autocomplete_nullable_locale.error.INVALID_VALUE = String Autocomplete Nullable Localized Invalid Value
 
 properties.integer.label = Integer
 properties.integer.placeholder = Integer Placeholder
@@ -374,12 +376,14 @@ properties.string_autocomplete_nullable_enforced.placeholder = String Autocomple
 properties.string_autocomplete_nullable_enforced.search.label = String Autocompletar Nullable Enforzada en Modo Búsqueda
 properties.string_autocomplete_nullable_enforced.search.placeholder = String Autocompletar Nullable Enforzada Marcador en Modo Búsqueda
 properties.string_autocomplete_nullable_enforced.error.TOO_LARGE = String Autocompletar Nullable Enforzada demasiado larga error
+properties.string_autocomplete_nullable_enforced.error.INVALID_VALUE = String Autocompletar Nullable Enforzada valor inválido
 
 properties.string_autocomplete_nullable_locale.label = String Autocompletar Nullable Localizada
 properties.string_autocomplete_nullable_locale.placeholder = String Autocompletar Nullable Localizada Marcador
 properties.string_autocomplete_nullable_locale.search.label = String Autocompletar Nullable Localizada en Modo Búsqueda
 properties.string_autocomplete_nullable_locale.search.placeholder = String Autocompletar Nullable Localizada Marcador en Modo Búsqueda
 properties.string_autocomplete_nullable_locale.error.TOO_LARGE = String Autocompletar Nullable Localizada demasiado larga error
+properties.string_autocomplete_nullable_locale.error.INVALID_VALUE = String Autocompletar Nullable Localizada valor inválido
 
 properties.integer.label = Valor Entero
 properties.integer.placeholder = Valor Entero Marcador
