--- a/itemize/data/users/user.properties
+++ b/itemize/data/users/user.properties
@@ -5,6 +5,8 @@ fts_search_field_placeholder = Insert Relevant User Data
 custom.login = Login
 custom.logout = Logout
 custom.signup = Signup
+custom.signupInstead = Do not have an account? Sign Up
+custom.loginInstead = Already have an account? Log In
 custom.profile = Profile
 
 properties.username.label = Username
@@ -58,6 +60,8 @@ custom.login = Iniciar Sesión
 custom.logout = Cerrar Sesión
 custom.signup = Registrarse
 custom.profile = Perfil de Usuario
+custom.signupInstead = ¿No tiene cuenta? Regístrese
+custom.loginInstead = ¿Ya tiene cuenta? Inicie Sesión
 
 properties.username.label = Nombre de usuario
 properties.username.placeholder = Escriba un nombre de usuario
