--- a/data/index.properties
+++ b/data/index.properties
@@ -1,3 +1,5 @@
 [en]
+terms_and_conditions = @resource tems_and_conditions/en.html
 
 [es]
+terms_and_conditions = @resource tems_and_conditions/es.html
