--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@types/debug": "^4.1.5",
     "@types/deep-equal": "^1.0.1",
     "@types/express": "^4.17.2",
+    "@types/html-minifier": "^3.5.3",
     "@types/node": "^10.17.6",
     "@types/pg": "^7.11.2",
     "@types/properties-reader": "0.0.1",
@@ -57,6 +58,7 @@
     "@types/react-autosuggest": "^9.3.13",
     "@types/react-dom": "^16.9.4",
     "@types/react-router-dom": "^5.1.3",
+    "@types/svgo": "^1.3.0",
     "@types/uuid": "^3.4.6",
     "ajv": "^6.10.2",
     "autosuggest-highlight": "^3.1.1",
@@ -72,6 +74,7 @@
     "deep-equal": "^1.1.1",
     "graphql": "^14.5.8",
     "history": "^4.10.1",
+    "html-minifier": "^4.0.0",
     "install": "^0.12.2",
     "json-source-map": "^0.4.0",
     "leaflet": "^1.6.0",
@@ -90,6 +93,7 @@
     "sass-loader": "^7.3.1",
     "source-map-loader": "^0.2.4",
     "source-map-support": "^0.5.16",
+    "svgo": "^1.3.2",
     "tslint": "^5.20.1",
     "tslint-react": "^3.6.0",
     "typescript": "^3.7.2",
