--- a/data/index.properties
+++ b/data/index.properties
@@ -1,5 +1,5 @@
 [en]
-terms_and_conditions = tems_and_conditions/en.html
+terms_and_conditions = terms_and_conditions/en.html
 
 [es]
-terms_and_conditions = tems_and_conditions/es.html
+terms_and_conditions = terms_and_conditions/es.html
