--- a/data/index.properties
+++ b/data/index.properties
@@ -1,5 +1,13 @@
 [en]
-terms_and_conditions = terms_and_conditions/en.html
+terms_and_conditions = Terms and Conditions
+terms_and_conditions_content = terms_and_conditions/en.html
+privacy_policy = Privacy Policy
+privacy_policy_content = privacy_policy/en.html
+accept_terms = By signing up I accept the {0} and {1}
 
 [es]
-terms_and_conditions = terms_and_conditions/es.html
+terms_and_conditions = Términos y Condiciones
+terms_and_conditions_content = terms_and_conditions/es.html
+privacy_policy = Política de Privacidad
+privacy_policy_content = privacy_policy/es.html
+accept_terms = Al registrarme acepto los {0} y la {1}
