--- a/itemize/data/index.properties
+++ b/itemize/data/index.properties
@@ -49,6 +49,7 @@ error.BLOCKED = The item has been blocked
 error.NOT_FOUND = The item cannot be found
 error.FORBIDDEN = Forbidden
 error.CANT_CONNECT = Canņot communicate with the server
+error.INVALID_DATA_SUBMIT_REFUSED = Some fields are invalid
 error.INTERNAL_SERVER_ERROR = Internal Server Error
 error.UNSPECIFIED = Unspecified Error
 error.MUST_BE_LOGGED_IN = You must be logged in
@@ -105,6 +106,7 @@ error.BLOCKED = El item ha sido bloqueado
 error.NOT_FOUND = El item no existe
 error.FORBIDDEN = Acción Denegada
 error.CANT_CONNECT = No se puede comunicar con el servidor
+error.INVALID_DATA_SUBMIT_REFUSED = Algunos campos son Inválidos
 error.INTERNAL_SERVER_ERROR = Error Interno en el Servidor
 error.UNSPECIFIED = Error desconocido
 error.MUST_BE_LOGGED_IN = Debes iniciar sesión para realizar esta acción
