I don't even know how this works

--- a/itemize/data/index.properties
+++ b/itemize/data/index.properties
@@ -12,6 +12,8 @@ any = any
 cancel = cancel
 ok = ok
 
+close = close
+
 format_bold = bold
 format_italic = italic
 format_underline = underline
@@ -68,6 +70,8 @@ any = cualquiera
 
 cancel = cancelar
 ok = ok
+
+close = cerrar
 
 format_bold = negrita
 format_italic = cursiva 
