--- a/itemize/data/users/user.properties
+++ b/itemize/data/users/user.properties
@@ -5,9 +5,11 @@ fts_search_field_placeholder = Insert Relevant User Data
 custom.login = Login
 custom.logout = Logout
 custom.signup = Signup
-custom.signupInstead = Do not have an account? Sign Up
-custom.loginInstead = Already have an account? Log In
+custom.signup_instead = Do not have an account? Sign Up
+custom.login_instead = Already have an account? Log In
 custom.profile = Profile
+custom.update_profile = Update Profile
+custom.profile_updated_succesfully = Profile Updated!
 
 properties.username.label = Username
 properties.username.placeholder = Type an username
@@ -60,8 +62,10 @@ custom.login = Iniciar Sesión
 custom.logout = Cerrar Sesión
 custom.signup = Registrarse
 custom.profile = Perfil de Usuario
-custom.signupInstead = ¿No tiene cuenta? Regístrese
-custom.loginInstead = ¿Ya tiene cuenta? Inicie Sesión
+custom.signup_instead = ¿No tiene cuenta? Regístrese
+custom.login_instead = ¿Ya tiene cuenta? Inicie Sesión
+custom.update_profile = Actualizar información
+custom.profile_updated_succesfully = ¡Actualización Exitosa!
 
 properties.username.label = Nombre de usuario
 properties.username.placeholder = Escriba un nombre de usuario
