fixed a couple of things

--- a/itemize/data/index.properties
+++ b/itemize/data/index.properties
@@ -56,6 +56,7 @@ error.INTERNAL_SERVER_ERROR = Internal Server Error
 error.UNSPECIFIED = Unspecified Error
 error.MUST_BE_LOGGED_IN = You must be logged in
 error.USER_BLOCKED = You have been banned
+error.USER_REMOVED = The account related to this session has been removed
 
 [es]
 name = Español
@@ -115,3 +116,4 @@ error.INTERNAL_SERVER_ERROR = Error Interno en el Servidor
 error.UNSPECIFIED = Error desconocido
 error.MUST_BE_LOGGED_IN = Debes iniciar sesión para realizar esta acción
 error.USER_BLOCKED = Usted está baneado
+error.USER_REMOVED = La cuenta relacionada con esta sesión ha sido eliminada
