--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/jsdom": "^12.2.4",
     "@types/jsonwebtoken": "^8.3.5",
     "body-parser": "^1.19.0",
+    "comlink": "^4.2.0",
     "diacritics": "^1.3.0",
     "dompurify": "^2.0.7",
     "express": "^4.17.1",
@@ -75,6 +76,7 @@
     "graphql": "^14.5.8",
     "history": "^4.10.1",
     "html-minifier": "^4.0.0",
+    "idb": "^4.0.5",
     "install": "^0.12.2",
     "json-source-map": "^0.4.0",
     "leaflet": "^1.6.0",
