--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/graphql-fields": "^1.3.2",
     "@types/jsdom": "^12.2.4",
     "@types/jsonwebtoken": "^8.3.5",
+    "@types/socket.io": "^2.1.4",
     "body-parser": "^1.19.0",
     "comlink": "^4.2.0",
     "diacritics": "^1.3.0",
@@ -33,6 +34,7 @@
     "pg": "^7.15.1",
     "prompt-confirm": "^2.0.4",
     "react-dropzone": "^10.2.1",
+    "socket.io": "^2.3.0",
     "webpack-bundle-analyzer": "^3.6.0"
   },
   "devDependencies": {
@@ -59,6 +61,7 @@
     "@types/react-autosuggest": "^9.3.13",
     "@types/react-dom": "^16.9.4",
     "@types/react-router-dom": "^5.1.3",
+    "@types/socket.io-client": "^1.4.32",
     "@types/svgo": "^1.3.0",
     "@types/uuid": "^3.4.6",
     "ajv": "^6.10.2",
@@ -93,6 +96,7 @@
     "react-quill": "^1.3.3",
     "react-router-dom": "^5.1.2",
     "sass-loader": "^7.3.1",
+    "socket.io-client": "^2.3.0",
     "source-map-loader": "^0.2.4",
     "source-map-support": "^0.5.16",
     "svgo": "^1.3.2",
