--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/graphql-fields": "^1.3.2",
     "@types/jsdom": "^12.2.4",
     "@types/jsonwebtoken": "^8.3.5",
+    "@types/redis": "^2.8.14",
     "@types/socket.io": "^2.1.4",
     "body-parser": "^1.19.0",
     "comlink": "^4.2.0",
@@ -34,6 +35,7 @@
     "pg": "^7.15.1",
     "prompt-confirm": "^2.0.4",
     "react-dropzone": "^10.2.1",
+    "redis": "^2.8.0",
     "socket.io": "^2.3.0",
     "webpack-bundle-analyzer": "^3.6.0"
   },
