--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@material-ui/icons": "^4.5.1",
     "@material-ui/pickers": "^3.2.8",
     "@types/autosuggest-highlight": "^3.1.0",
+    "@types/bcrypt": "^3.0.0",
     "@types/colors": "^1.2.1",
     "@types/debug": "^4.1.5",
     "@types/deep-equal": "^1.0.1",
@@ -73,6 +74,7 @@
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
+    "bcrypt": "^3.0.7",
     "colors": "^1.4.0",
     "convert-units": "^2.3.4",
     "css-loader": "^2.1.1",
