--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/diacritics": "^1.3.1",
     "@types/dompurify": "^2.0.0",
     "@types/graphql-fields": "^1.3.2",
+    "@types/graphql-upload": "^8.0.3",
     "@types/jsdom": "^12.2.4",
     "@types/jsonwebtoken": "^8.3.5",
     "@types/redis": "^2.8.14",
@@ -29,6 +30,7 @@
     "express": "^4.17.1",
     "express-graphql": "^0.9.0",
     "graphql-fields": "^2.0.3",
+    "graphql-upload": "^9.0.0",
     "jsdom": "^15.2.1",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.16.5",
