--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,7 @@
     "outDir": "dist",
     "esModuleInterop": true,
     "resolveJsonModule": true,
+    "skipLibCheck": true
   },
   "compileOnSave": true,
   "exclude": [
