--- a/itemize/data/users/user.properties
+++ b/itemize/data/users/user.properties
@@ -43,6 +43,10 @@ properties.role.values.ADMIN = Admin
 properties.role.null_value = Unspecified
 properties.role.error.NOT_NULLABLE = Missing Role
 
+properties.profile_picture.label = Profile Picture
+properties.profile_picture.placeholder = Upload a profile picture
+properties.profile_picture.error.TOO_LARGE = Only one file allowed
+
 properties.address.label = Address (optional)
 properties.address.placeholder = Type your address
 properties.address.description = This address is used only for ease of use and it is not shared with anyone, not even admins or mods. It is used to prefill information for transactions.
@@ -98,6 +102,10 @@ properties.role.values.MODERATOR = Moderador
 properties.role.values.ADMIN = Administrador
 properties.role.null_value = Sin Especificar
 properties.role.error.NOT_NULLABLE = Falta el Rol
+
+properties.profile_picture.label = Foto de Perfil
+properties.profile_picture.placeholder = Subir Imagen
+properties.profile_picture.error.TOO_LARGE = Sólo se permite un archivo
 
 properties.address.label = Dirección (opcional)
 properties.address.placeholder = Escriba su Dirección
