--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/jsdom": "^12.2.4",
     "@types/jsonwebtoken": "^8.3.5",
     "@types/redis": "^2.8.14",
+    "@types/sharp": "^0.23.1",
     "@types/socket.io": "^2.1.4",
     "body-parser": "^1.19.0",
     "comlink": "^4.2.0",
@@ -38,6 +39,7 @@
     "prompt-confirm": "^2.0.4",
     "react-dropzone": "^10.2.1",
     "redis": "^2.8.0",
+    "sharp": "^0.23.4",
     "socket.io": "^2.3.0",
     "webpack-bundle-analyzer": "^3.6.0"
   },
