--- a/itemize/data/users/user.properties
+++ b/itemize/data/users/user.properties
@@ -51,11 +51,9 @@ properties.address.label = Address (optional)
 properties.address.placeholder = Type your address
 properties.address.description = This address is used only for ease of use and it is not shared with anyone, not even admins or mods. It is used to prefill information for transactions.
 
-policies.edit.REQUIRES_PASSWORD_CONFIRMATION.label = Password confirmation
-policies.edit.REQUIRES_PASSWORD_CONFIRMATION.placeholder = Password
+policies.edit.REQUIRES_PASSWORD_CONFIRMATION.title = Password confirmation
 policies.edit.REQUIRES_PASSWORD_CONFIRMATION.fail = Invalid password provided
-policies.delete.REQUIRES_PASSWORD_CONFIRMATION.label = Password confirmation
-policies.delete.REQUIRES_PASSWORD_CONFIRMATION.placeholder = Password
+policies.delete.REQUIRES_PASSWORD_CONFIRMATION.title = Password confirmation
 policies.delete.REQUIRES_PASSWORD_CONFIRMATION.fail = Invalid password provided
 
 [es]
@@ -111,9 +109,7 @@ properties.address.label = Dirección (opcional)
 properties.address.placeholder = Escriba su Dirección
 properties.address.description = La Dirección no será compartida con nadie, ni siquiera admins o moderadores. Sólo existe como utilidad para auto-completar la información de transacciones.
 
-policies.edit.REQUIRES_PASSWORD_CONFIRMATION.label = Confirme su contraseña
-policies.edit.REQUIRES_PASSWORD_CONFIRMATION.placeholder = Contraseña
+policies.edit.REQUIRES_PASSWORD_CONFIRMATION.title = Confirme su contraseña
 policies.edit.REQUIRES_PASSWORD_CONFIRMATION.fail = Falló el chequeo de la contraseña
-policies.delete.REQUIRES_PASSWORD_CONFIRMATION.label = Confirme su contraseña
-policies.delete.REQUIRES_PASSWORD_CONFIRMATION.placeholder = Contraseña
+policies.delete.REQUIRES_PASSWORD_CONFIRMATION.title = Confirme su contraseña
 policies.delete.REQUIRES_PASSWORD_CONFIRMATION.fail = Falló el chequeo de la contraseña
