--- a/itemize/data/index.properties
+++ b/itemize/data/index.properties
@@ -54,6 +54,7 @@ error.CANT_CONNECT = Canņot communicate with the server
 error.INVALID_DATA_SUBMIT_REFUSED = Some fields are invalid
 error.INTERNAL_SERVER_ERROR = Internal Server Error
 error.UNSPECIFIED = Unspecified Error
+error.NOTHING_TO_UPDATE = Nothing to update
 error.MUST_BE_LOGGED_IN = You must be logged in
 error.USER_BLOCKED = You have been banned
 error.USER_REMOVED = The account related to this session has been removed
@@ -114,6 +115,7 @@ error.CANT_CONNECT = No se puede comunicar con el servidor
 error.INVALID_DATA_SUBMIT_REFUSED = Algunos campos son Inválidos
 error.INTERNAL_SERVER_ERROR = Error Interno en el Servidor
 error.UNSPECIFIED = Error desconocido
+error.NOTHING_TO_UPDATE = No existen cambios para actualizar
 error.MUST_BE_LOGGED_IN = Debes iniciar sesión para realizar esta acción
 error.USER_BLOCKED = Usted está baneado
 error.USER_REMOVED = La cuenta relacionada con esta sesión ha sido eliminada
