--- a/data/index.properties
+++ b/data/index.properties
@@ -1,4 +1,8 @@
 [en]
+app_name = Cycling Exchange Hub
+app_short_name = Cycling Exchage Hub
+app_description = Buy and sell cycling parts, engage in forums, and more
+
 terms_and_conditions = Terms and Conditions
 terms_and_conditions_content = terms_and_conditions/en.html
 privacy_policy = Privacy Policy
@@ -6,6 +10,10 @@ privacy_policy_content = privacy_policy/en.html
 accept_terms = By signing up I accept the {0} and {1}
 
 [es]
+app_name = Cycling Exchange Hub
+app_short_name = Cycling Exchage Hub
+app_description = Compra y venta de partes de ciclismo, foros y más
+
 terms_and_conditions = Términos y Condiciones
 terms_and_conditions_content = terms_and_conditions/es.html
 privacy_policy = Política de Privacidad
