--- a/itemize/data/users/user.properties
+++ b/itemize/data/users/user.properties
@@ -8,6 +8,7 @@ custom.signup = Signup
 custom.signup_instead = Do not have an account? Sign Up
 custom.login_instead = Already have an account? Log In
 custom.profile = Profile
+custom.my_profile = My Profile
 custom.update_profile = Update Profile
 custom.profile_updated_succesfully = Profile Updated!
 
@@ -64,6 +65,7 @@ custom.login = Iniciar Sesión
 custom.logout = Cerrar Sesión
 custom.signup = Registrarse
 custom.profile = Perfil de Usuario
+custom.my_profile = Mi Cuenta
 custom.signup_instead = ¿No tiene cuenta? Regístrese
 custom.login_instead = ¿Ya tiene cuenta? Inicie Sesión
 custom.update_profile = Actualizar información
