renamed item to include

--- a/itemize/data/test/item_definition/index.properties
+++ b/itemize/data/test/item_definition/index.properties
@@ -1,7 +1,7 @@
 [en]
-name = Item Definition Test
-fts_search_field_label = Item Definition Test FTS
-fts_search_field_placeholder = Item Definition Test FTS Placeholder
+name = Include Definition Test
+fts_search_field_label = Include Definition Test FTS
+fts_search_field_placeholder = Include Definition Test FTS Placeholder
 
 properties.boolean.label = Boolean
 properties.boolean.description = Boolean Description
@@ -314,9 +314,9 @@ properties.files_single.error.NOT_NULLABLE = File not Nullable error
 properties.files_single.error.TOO_LARGE = File only one
 
 [es]
-name = Test de Definición de Item
-fts_search_field_label = Test de Definición de Item FTS
-fts_search_field_placeholder = Test de Definición de Item FTS Marcador
+name = Test de Definición de Include
+fts_search_field_label = Test de Definición de Include FTS
+fts_search_field_placeholder = Test de Definición de Include FTS Marcador
 
 properties.boolean.label = Valor Booleano
 properties.boolean.search.label = Valor Booleano en Modo Búsqueda
