--- a/itemize/data/test/vehicle/index.properties
+++ b/itemize/data/test/vehicle/index.properties
@@ -3,13 +3,13 @@ name = Vehicle
 fts_search_field_label = Search for a Vehicle
 fts_search_field_placeholder = Insert details here
 
-items.chasis.name = Vehicle Chasis
-items.chasis.exclusion_selector_label = The chasis is missing
-items.chasis.exclusion_ternary_selector_label = Select whether the chasis must be included or not
-items.chasis.excluded_label = The chasis is missing
-items.chasis.included_label = Includes a chasis
-items.chasis.any_label = Any
-items.chasis.callout_excluded_label = No Chasis
+includes.chasis.name = Vehicle Chasis
+includes.chasis.exclusion_selector_label = The chasis is missing
+includes.chasis.exclusion_ternary_selector_label = Select whether the chasis must be included or not
+includes.chasis.excluded_label = The chasis is missing
+includes.chasis.included_label = Includes a chasis
+includes.chasis.any_label = Any
+includes.chasis.callout_excluded_label = No Chasis
 
 properties.vehicle_type.label = Vehicle Type
 properties.vehicle_type.placeholder = Select the Type of your Vehicle
@@ -45,13 +45,13 @@ name = Vehículo
 fts_search_field_label = Busque un Vehículo
 fts_search_field_placeholder = Inserte los detalles aquí
 
-items.chasis.name = Chasis del Vehículo
-items.chasis.exclusion_selector_label = Falta el Chasis
-items.chasis.exclusion_ternary_selector_label = Seleccione si necesita que el chasis sea incluido o no
-items.chasis.excluded_label = Falta el chasis
-items.chasis.included_label = Incluye el chasis
-items.chasis.any_label = Cualquiera
-items.chasis.callout_excluded_label = Sin Chasis
+includes.chasis.name = Chasis del Vehículo
+includes.chasis.exclusion_selector_label = Falta el Chasis
+includes.chasis.exclusion_ternary_selector_label = Seleccione si necesita que el chasis sea incluido o no
+includes.chasis.excluded_label = Falta el chasis
+includes.chasis.included_label = Incluye el chasis
+includes.chasis.any_label = Cualquiera
+includes.chasis.callout_excluded_label = Sin Chasis
 
 properties.vehicle_type.label = Tipo de Vehículo
 properties.vehicle_type.placeholder = Seleccione el tipo de su Vehículo
