--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/graphql-upload": "^8.0.3",
     "@types/jsdom": "^12.2.4",
     "@types/jsonwebtoken": "^8.3.5",
+    "@types/node-fetch": "^2.5.4",
     "@types/redis": "^2.8.14",
     "@types/sharp": "^0.23.1",
     "@types/socket.io": "^2.1.4",
@@ -30,11 +31,13 @@
     "dompurify": "^2.0.7",
     "express": "^4.17.1",
     "express-graphql": "^0.9.0",
+    "form-data": "^3.0.0",
     "graphql-fields": "^2.0.3",
     "graphql-upload": "^9.0.0",
     "jsdom": "^15.2.1",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.16.5",
+    "node-fetch": "^2.6.0",
     "pg": "^7.15.1",
     "prompt-confirm": "^2.0.4",
     "react-dropzone": "^10.2.1",
